SET(GRAPH_SHADER_INCLUDE ${ROOT_INCLUDE_PATH}/hgl/graph/shader)

SET(GRAPH_SHADER_HEADER ${GRAPH_SHADER_INCLUDE}/glsl2spv.h)

SET(GRAPH_SHADER_SOURCE glsl2spv.cpp)

SOURCE_GROUP("Header Files" FILES ${GRAPH_SHADER_HEADER})
SOURCE_GROUP("Source Files" FILES ${GRAPH_SHADER_SOURCE})

add_library(ULRE.Shader STATIC ${GRAPH_SHADER_HEADER}
                               ${GRAPH_SHADER_SOURCE})
